# qwiic_sdk

./: .gitmodules  CMakeLists.txt  README.md  sparkfun_board_setup.cmake
boards/include/boards/: sparkfun_micromod.h  sparkfun_promicro.h  sparkfun_thingplus.h
src/: CMakeLists.txt
src/qwiic_core/: CMakeLists.txt
src/qwiic_core/examples/example1/: CMakeLists.txt
src/qwiic_i2c/: qwiic_i2c.cpp  qwiic_i2c.h
src/qwiic_i2c/examples/example1/: bme280_example1.cpp
