
# Add components and libraries of the SparkFun SDK to the build environment


add_subdirectory(qwiic_i2c)
add_subdirectory(qwiic_bme280)
add_subdirectory(qwiic_ccs811)
add_subdirectory(qwiic_rfid)
add_subdirectory(qwiic_twist)
add_subdirectory(qwiic_joystick)
add_subdirectory(qwiic_keypad)
add_subdirectory(qwiic_relay)
add_subdirectory(qwiic_vcnl4040)
add_subdirectory(qwiic_ak975x)
add_subdirectory(qwiic_uoled)
add_subdirectory(qwiic_vl53l1x)
