
# Add components and libraries of the SparkFun SDK to the build environment


add_subdirectory(qwiic_core)
add_subdirectory(qwiic_bme280/src)
add_subdirectory(qwiic_ccs811/src)
add_subdirectory(qwiic_rfid/src)
add_subdirectory(qwiic_twist/src)
add_subdirectory(qwiic_joystick/src)
add_subdirectory(qwiic_keypad/src)
add_subdirectory(qwiic_relay/src)
add_subdirectory(qwiic_vcnl4040/src)
add_subdirectory(qwiic_ak975x/src)
add_subdirectory(qwiic_uoled/src)
#add_subdirectory(qwiic_vl53l1x)
